fix sonar issues in test